Thu Nov 18 03:27:52 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc: Applied the Quartz "DANGEROUS" patch, but
	  disabled for now.  This way it won't keep being broken by changes
	  to the code.

Tue Nov 16 04:29:25 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc: Ah, it's __sun__/__sun/sun, not
	  __solaris__ (at least for x86 Solaris 9).

Tue Nov 16 02:56:44 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc: Solaris defines __solaris__ not
	  __SOLARIS__.

Mon Nov 15 12:40:38 GMT 2004  Olly Betts <olly@survex.com>

	* tests/api_db.cc: Added new test userweight1 to test user defined
	  matching schemes.

Sun Nov 14 05:20:34 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_metafile.cc,
	  backends/quartz/quartz_metafile.h: Removed unused
	  QuartzMetaFile::erase() method.

Sun Nov 14 04:55:05 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_database.cc: For cygwin, use the underlying
	  MoveFile API call for locking, as link() doesn't work on FAT
	  partitions.  And don't rely on HAVE_LINK to control whether we
	  use link() otherwise - if the configure test somehow misfires, a
	  compilation error is better than using rename() on Unix as that
	  would cause a second writer to smash the lock of the first.

Thu Nov 11 06:58:41 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc: Removed superfluous statement.

Tue Nov 09 23:50:10 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc: Need to include sys/types.h to define
	  ssize_t, size_t, and off_t before we prototype pread and pwrite
	  for OSF.

Tue Nov 09 22:39:00 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc: Tweaked the pread/pwrite mess to try to
	  get it to work on OSF and x86 Solaris while not breaking it
	  elsewhere.

Tue Nov 09 19:29:37 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc,backends/quartz/btree.h: More refactoring.
