@@ -1,3 +1,9 @@
+Fri Nov 19 04:20:39 GMT 2004  Olly Betts <olly@survex.com>
+
+	* backends/quartz/bcursor.cc,backends/quartz/btree.cc,
+	  backends/quartz/btree.h: Factored out near identical code from
+	  Btree::find_tag() and Bcursor::get_tag() into Btree::read_tag().
+
 Thu Nov 18 03:27:52 GMT 2004  Olly Betts <olly@survex.com>
 
 	* backends/quartz/btree.cc: Applied the Quartz "DANGEROUS" patch, but
